# Noesis

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/specs/: 2026-06-24-noesis-v1-design.md
noesis/agentops/: __init__.py  diagnostics.py  evidence_preview.py  metrics.py
noesis/api/: app.py  deps.py  dto.py  dto_positions.py  portfolio_health.py  position_rows.py
noesis/config/: settings.py
noesis/db/: connection.py  migrate.py  models.py  schema.sql
noesis/eval/: __init__.py  cases.py  fixtures.py  metrics.py  quality.py  quality_format.py  report.py  runner.py  users.py
noesis/graph/: agentops_runtime.py  build_graph.py  errors.py  grounding.py  runner.py  runtime.py  schemas.py  snapshots.py  state.py  tracing.py  traversal.py
noesis/tools/: cache_layers.py  contracts.py  execution.py  registry.py  wrappers.py
prompts/: expand.md  intake_resolve.md  intel_synth.md  thesis_draft.md
scripts/: eval.py  fixture_api_app.py  png_checks.py  process_smoke.py  quality_report.py  smoke_real.py  smoke_release.py  smoke_ui_flow.py  smoke_ui_mutation.py  smoke_visual.py  smoke_web.py
tests/: test_m1_e2e.py  test_m1_redline.py  test_settings.py  test_smoke.py
tests/agentops/: test_agentops_metrics.py
tests/api/: conftest.py  test_agentops.py  test_app.py  test_entities.py  test_evidences.py  test_portfolio.py  test_portfolio_supply_chain.py  test_position_delete.py  test_runs.py  (+5 more)
web/: README.md  config-proxy.test.ts  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
(+219 files in other folders)
