[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noesis"
version = "0.1.0"
description = "Local-first investment intelligence agent."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "langgraph==0.2.60",
    "langgraph-checkpoint-sqlite==2.0.1",
    "chromadb==0.5.23",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
]

[tool.setuptools.packages.find]
include = ["noesis*"]
